--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
         <ul>
           <li ><a href ="#Home">Home</a></li>
           <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="{%url 'services'%}">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
 
         </ul>
@@ -178,7 +178,7 @@
                 <div class="card mb-3">
                      <img class="card-img-top img-fluid" src="{{item.image.url}}" alt="">
                      <div class="card-body">
-                         <h4 class="title"><a href="http://kihjfbvcsadz.com/modelview?name= ">{{item.name.url}}</a></h4>
+                         <h4 class="title"><a href="{%url 'services'%}?cat={{item.id}}">{{item.name}}</a></h4>
                          <p class="description">{{item.summary}}</p>
 
                      </div>
