--- a/templates/services.html
+++ b/templates/services.html
@@ -1,139 +1,164 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
 
+    <meta charset="utf-8">
+    <title>Home</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <script src="{% static 'lib/PapaParse/papaparse.js' %}"></script>
+    <script src="{% static 'lib/PapaParse/papaparse.min.js'%}"></script>
+    <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
+    <meta content="" name="keywords">
+    <meta content="" name="description">
+    <link href="{% static 'images/favicon.png'%}" rel="icon">
+    <link href="{% static 'images/apple-touch-icon.png'%}" rel="apple-touch-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
-  <meta charset="utf-8">
-  <title>Services</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <script src="{% static 'lib/PapaParse/papaparse.js' %}"></script>
-  <script src="{% static 'lib/PapaParse/papaparse.min.js'%}"></script>
-  <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-  <link href="{% static 'images/favicon.png'%}" rel="icon">
-  <link href="{% static 'images/apple-touch-icon.png'%}" rel="apple-touch-icon">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
-
-  <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-  <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
-  <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
+    <!-- Bootstrap CSS File -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/service.css' %}">
+    <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
 
 
-  <!-- Libraries CSS Files -->
-  <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
-  <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
-  <link href="{% static 'lib/ionicons/css/ionicons.min.css' %}" rel="stylesheet">
-  <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-  <link href="{% static 'lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
+    <!-- Libraries CSS Files -->
+    <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
+    <link href="{% static 'lib/animate/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'lib/ionicons/css/ionicons.min.css' %}" rel="stylesheet">
+    <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
+    <link href="{% static 'lib/lightbox/css/lightbox.min.css' %}" rel="stylesheet">
 
-  <!-- Uncomment below i you want to use a preloader -->
-  <!-- <div id="preloader"></div> -->
+    <!-- Uncomment below i you want to use a preloader -->
+    <!-- <div id="preloader"></div> -->
 
-  <!-- JavaScript Libraries -->
-  <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
-  <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
-  <script src="{% static 'lib/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-  <script src="{% static 'lib/easing/easing.min.js' %}"></script>
-  <script src="{% static 'lib/mobile-nav/mobile-nav.js' %}"></script>
-  <script src="{% static 'lib/wow/wow.min.js'%}"></script>
-  <script src="{% static 'lib/waypoints/waypoints.min.js'%}"></script>
-  <script src="{% static 'lib/counterup/counterup.min.js'%}"></script>
-  <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
-  <script src="{% static 'lib/isotope/isotope.pkgd.min.js' %}"></script>
-  <script src="{% static 'lib/lightbox/js/lightbox.min.js' %}"></script>
-  <!-- Contact Form JavaScript File -->
-  <script src="{% static 'js/contactform.js' %}"></script>
+    <!-- JavaScript Libraries -->
+    <script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
+    <script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
+    <script src="{% static 'lib/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'lib/easing/easing.min.js' %}"></script>
+    <script src="{% static 'lib/mobile-nav/mobile-nav.js' %}"></script>
+    <script src="{% static 'lib/wow/wow.min.js'%}"></script>
+    <script src="{% static 'lib/waypoints/waypoints.min.js'%}"></script>
+    <script src="{% static 'lib/counterup/counterup.min.js'%}"></script>
+    <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'lib/isotope/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'lib/lightbox/js/lightbox.min.js' %}"></script>
+    <!-- Contact Form JavaScript File -->
+    <script src="{% static 'js/contactform.js' %}"></script>
 
-  <!-- Template Main Javascript File -->
-  <script src="{% static 'js/main.js' %}"></script>
+    <!-- Template Main Javascript File -->
+    <script src="{% static 'js/main.js' %}"></script>
+
+
 
 </head>
-  <body>
+
+<body>
+
+  <header id="header" class="fixed-top ">
+    <div class="container">
+
+      <div class="logo float-left ">
+
+       <a href="#intro" class="scrollto"><img src="{% static 'images/logo.png' %} "  alt="" class="img-fluid "></a>
+      </div>
+
+      <nav class="main-nav float-right d-none d-lg-block ">
+        <ul>
+          <li ><a href ="{%url 'index'%}">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="{%url 'services'%}">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+
+        </ul>
+      </nav>
+
+    </div>
+  </header>
+
+    <div class="wrapper">
 
 
-      <!--==========================
-      Header
-      ============================-->
+        <!-- Sidebar Holder -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Categories</h3>
+            </div>
 
-      <header id="header" class="fixed-top ">
-        <div class="container">
+            <ul class="list-unstyled components">
 
-          <div class="logo float-left ">
+                <li class="active">
+                  {% if catList %}
+                       {%  for item in catList %}
+                         <a href="#" >{{item.name}}</a>
+                          {% endfor %}
+                           {% endif %}
 
-           <a href="#intro" class="scrollto"><img src="static/images/logo.png"  alt="" class="img-fluid "></a>
+
+                </li>
+        </nav>
+
+        <!-- Page Content Holder -->
+        <div id="content"class="section-bg  clearfix" >
+
+
+          <section id="services" >
+            <div class="container">
+
+              <header class="section-header">
+                <h3></h3>
+                <p></p>
+              </header>
+
+              <div class="row">
+                  {% if models %}
+                     {%  for item in models %}
+                         {%  for category in item.category %}
+                               <h2>{{category.name}}</h2>
+                                 <div class="line"></div>
+                          {% endfor %}
+                     <div class="col-md-6 col-lg-4 mb-4 wow bounceInUp" data-wow-duration="1.4s">
+                      <div class="card h-100 mb-3">
+                           <img class="card-img-top img-fluid" src="{{ item.image.url }}" alt="">
+                           <div class="card-body">
+
+                               <h4 class="title"><a href="{%url 'model'%}?model={{ item.name }}">{{item.name}}</a></h4>
+                               <p class="description">{{item.summary}}</p>
+
+                           </div>
+                       </div>
+                     </div>
+                     {% endfor %}
+                     {% else %}
+                     <div class="col-md-12">
+                         <p>No Models</p>
+
+                     </div>
+                       {% endif %}
+
           </div>
 
-          <nav class="main-nav float-right d-none d-lg-block ">
-            <ul>
-              <li ><a href ="{%url 'index'%}">Home</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="{%url 'services'%}">Services</a></li>
-              <li><a href="#portfolio">Portfolio</a></li>
 
-            </ul>
-          </nav>
+            </div>
+          </section>
 
+
+          
         </div>
-      </header>
-
-  <section id="services" class="section-bg  clearfix">
-    <div class="container">
-
-      <header class="section-header">
-        <h3></h3>
-        <p></p>
-      </header>
-
-      <div class="row">
-          {% if models %}
-             {%  for item in models %}
-             <div class="col-md-6 col-lg-4 mb-4 wow bounceInUp" data-wow-duration="1.4s">
-              <div class="card h-100 mb-3">
-                   <img class="card-img-top img-fluid" src="{{ item.image.url }}" alt="">
-                   <div class="card-body">
-                       <h4 class="title"><a href="{%url 'model'%}?model={{ item.name }}">{{item.name}}</a></h4>
-                       <p class="description">{{item.summary}}</p>
-
-                   </div>
-               </div>
-             </div>
-             {% endfor %}
-             {% else %}
-             <div class="col-md-12">
-                 <p>No Models</p>
-
-             </div>
-               {% endif %}
-
-  </div>
-
-
     </div>
-  </section>
-  <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-  <!--==========================
-    Footer
-  ============================-->
-  <footer id="footer">
 
 
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>VirtusaCorp</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-
-        Designed by <a href="https://www.virtusa.com">xLabs</a>
-      </div>
-    </div>
-  </footer><!-- #footer -->
-
-
-
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+                $(this).toggleClass('active');
+            });
+        });
+    </script>
 </body>
+
 </html>
