--- a/templates/indview.html
+++ b/templates/indview.html
@@ -5,7 +5,7 @@
 
 
   <meta charset="utf-8">
-  <title>Home</title>
+  <title>{{model.name}}</title>
   <!-- <meta id="my-data" data-name="" data-other={{model.inputs_csv}}> -->
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <script src="{% static 'lib/PapaParse/papaparse.js' %}"></script>
@@ -55,18 +55,9 @@
   <script>
 
            function init(){
-             var djangoData = $('#my-data').data();
-             console.log(djangoData);
-             debugger;
-              var djangoData = $('#my-data').data()
-               document.getElementById('upload').addEventListener('change', handleFileSelect, false);
-            //   var tableData = "{{model.inps}}"
-               var html = arrayToTable(tableData);
-               $('#table_data').html(table_data);
-               $("#table_data").css("display", "block");
-               $("#Submit").css("display", "block");
 
-              }
+               document.getElementById('upload').addEventListener('change', handleFileSelect, false);
+  }
 
            function arrayToTable(tableData) {
 
@@ -76,7 +67,7 @@
                     row = $('<tr />');
                for (j = 0; j < data[i].length; j = j + 1) {
                     if (i === 0) {
-                        row.append($('<th />').html(data[i][j]));
+                        row.append($('<th />').html(data["name"]["value"]));
                      } else {
                         row.append($('<td />').html(data[i][j]));
                     }
@@ -84,54 +75,11 @@
                     table.append(row);
                }
                return table;
-      // document.getElementById('container').innerHTML = html;
-      //
-           // var table = $('<table></table>');
-           // $(tableData).each(function (i, rowData) {
-           //     var row = $('<tr></tr>');
-           //     $(rowData).each(function (j, cellData) {
-           //         row.append($('<td>'+cellData+'</td>'));
-           //     });
-           //     table.append(row);
-           // });
-           // return table;
                }
 
 
            $(window).load(function(){
               debugger;
-              var bigfile =  "{{model.inputs_csv}}"
-              var host =window.location.host;
-              var url = host + bigfile;
-
-              // Papa.parse(bigfile, {
-              //     complete: function(results) {
-              //        debugger
-              //        $('#table_data').html(arrayToTable(results.data));
-              //        $("#table_data").css("display", "block");
-              //        $("#Submit").css("display", "block");
-              //   }
-              // })
-
-
-            // $.ajax({
-            //      url:"/background_process_test",
-            //      type:"POST",
-            //      success:function(resp){
-            //        debugger;
-            //        table_data=resp;
-            //
-            //    }
-            //      });
-
-           /*Onload file upload*/
-            $("#loadData").click(function(){
-              debugger;
-                $('#table_data').html(table_data);
-                $("#table_data").css("display", "block");
-                $("#Submit").css("display", "block");
-
-             });
 
            $("#Submit").click(function(){
 
@@ -139,8 +87,8 @@
                     data: []
                };
                var table = document.querySelector('table'),
-               rows = table.getElementsByTagName('tr'),
-               i, j, cells, customerId,obj={}, myMap = new Map();
+                   rows = table.getElementsByTagName('tr'),
+                   i, j, cells, customerId,obj={}, myMap = new Map();
 
                for (i = 0, j = rows.length; i < j; ++i) {
                    cells = rows[i].getElementsByTagName('td');
@@ -149,62 +97,28 @@
                         continue;
                       }
 
-                      name = cells[0].innerHTML? cells[0].innerHTML:"";
-                      value= cells[1] ? cells[1].innerHTML : "";
+                      name = cells[0].innerHTML? cells[0].innerHTML.trim():"";
+                      value= cells[1] ? parseInt(cells[1].innerHTML.trim()) : "";
                         myMap.set(name, value);
+              }
 
-                       }
+             function mapToObj(map){
+                var obj = {}
+                map.forEach(function(v, k){
+                obj[k] = v
+              })
+              return obj
+            }
+           var myJson = {};
+            myJson= mapToObj(myMap);
+            myJson=JSON.stringify(myJson)
+           var res = document.getElementById('result');
+            debugger;
+               $.post('{{ model.endpoint }}',myJson).done(function(data){
+                   debugger;
+                   res.innerHTML = data;
+              })
 
-                       function mapToObj(map){
-                                        var obj = {}
-                                        map.forEach(function(v, k){
-                                        obj[k] = v
-                        })
-                        return obj
-                      }
-                         var myJson = {};
-                         myJson= mapToObj(myMap);
-                         myJson=JSON.stringify(myJson)
-                         debugger;
-              //FOR testing Purpose//
-//               var myMap = new Map();
-//                var inparr = [2, 30, 1, 7, 114, 1, 2, 1, 1, 2, 9, 3, 30, 0, 8, 1, 2, 1, 1, 1, 1, 4, 2, 2, 2, 2, 2, 3, 2, 3, 1, 3, 10, 6, 45, 45, 1, 1, 1, 3, 2, 1, 3, 2, 0, 1, 1, 1, 1, 1, 1, 2, 1, 3, 2];
-//                for(var i=0;i<inparr.length;i++){
-//                       name = i;
-//                       value = inparr[i];
-//                       myMap.set([name], value);
-//                   }
-//
-//                   function mapToObj(map){
-//                   var obj = {}
-//                   map.forEach(function(v, k){
-//                   obj[k] = v
-//   })
-//   return obj
-// }
-//    var myJson = {};
-//    myJson= mapToObj(myMap);
-//  // var json = JSON.stringify(myJson);
-//
-              $.post('{{ model.endpoint }}',myJson).done(function(data){
-                debugger;
-              res.innerHTML = data;
-            })
-              //TO be deleted//
-
-              data = JSON.parse(JSON.stringify(myJson))
-              var a= JSON.stringify(myJson)
-              // $.ajax({
-              //     url:{{ model.endpoint}},
-              //     type:"POST",
-              //     data:JSON.stringify(results),
-              //     contentType: 'application/json;charset=UTF-8',
-              //     success:function(resp){
-              //     debugger;
-              //      table_data=resp;
-              //
-              //        }
-              //     });
               });
 
 
@@ -263,7 +177,7 @@
 
       <div class="logo float-left ">
 
-       <a href="#intro" class="scrollto"><img src="static/images/logo.png"  alt="" class="img-fluid "></a>
+       <a href="#intro" class="scrollto"><img src="{% static 'images/logo.png' %}"  alt="" class="img-fluid "></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block ">
@@ -290,19 +204,15 @@
           </p>
 
 
-          <pre>{{model.content}} </pre>
-          <!-- <ul class="list list-ok strong bigger">
-            <li> Lorem ipsum dolor sit amet, qui corpora oportere cu</li>
-            <li> Lorem ipsum dolor sit amet, qui corpora oportere cu</li>
-            <li> Lorem ipsum dolor sit amet, qui corpora oportere cu</li>
-          </ul> -->
+          <p>{{model.content}} </p>
+
 
 
           </div>
         </div>
       </div>
 
-  </section>
+  <!-- </section>
 
   <section id="maincontent">
     <div class="container">
@@ -318,7 +228,7 @@
                 Dolorem adipiscing definiebas ut nec. Dolore consectetuer eu vim, elit molestie ei has, petentium imperdiet in pri mel virtute nam.
               </p>
                 <a href="#" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal"><i class="icon-angle-right"></i> Read more</a>
-                <!-- Modal -->
+                <
                    <div class="modal fade" id="myModal" role="dialog">
                      <div class="modal-dialog">
                       <div class="modal-content">
@@ -334,7 +244,7 @@
                      </div>
                   </div>
                </div>
-               <!--modal-->
+
             </div>
           </div>
         </div>
@@ -349,7 +259,7 @@
                 Dolorem adipiscing definiebas ut nec. Dolore consectetuer eu vim, elit molestie ei has, petentium imperdiet in pri mel virtute nam.
               </p>
                 <a href="#" class="btn btn-info  btn-sm" data-toggle="modal" data-target="#myModalApproach"><i class="icon-angle-right"></i> Read more</a>
-                 <!-- Modal -->
+
                 <div class="modal fade" id="myModalApproach" role="dialog">
                   <div class="modal-dialog">
                    <div class="modal-content">
@@ -382,8 +292,10 @@
 
 
     </div>
-    </section>
-
+    </section> -->
+    {% if model.extras  %}
+      {{ model.extras|safe }}
+    {% endif %}
     <section id="servicesNew" >
         <div class="container">
         <div class="row">
@@ -397,42 +309,89 @@
                       <input type ="file" id = "upload" name="inputfile" class="form-control">
                   </label>
                   </div>
-                  <div class="span2">
+
+                  <div>
+                  <div class=" span5" data-wow-duration="1.4s">
+
+                      <div id="table-scroll">
+
+                              <table class="fixed" id ="table_data">
+                                <th>Name</th>
+                                <th>Value</th>
+                              {% for i in model.inputs_csv %}
+
+
+
+
+                                         <tr>
+
+                                            <td>
+                                              {{i.0}}</td>
+                                            <td>{{ i.1 }}</td>
+
+                                         </tr>
+
+                              {% endfor %}
+
+                              </table>
+
+                    </div>
+              </div>
+               </div>
+                  <!-- <div class="span2">
                      <label class="custom-upload">
                      <span class="fa fa-database"></span>
                       Load Data here
                        <input type ="button" class="btn btn-color btn-rounded  btn-sm" id ="loadData" class="form-control">
                     </label>
-                 </div>
+                 </div> -->
                </div>
            </div>
          </div>
-          <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
-             <div id="table-wrapper ">
-              <!-- <div id="table-scroll"> -->
-              <div class="table-responsive table-responsive-md scrollit"  style="overflow-x:auto;" id ="table_data">
+         <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
+           <!-- <h5>Result </h5>  <strong><h3 id='result' style='color:black;'></h3></strong> -->
+
+              <h5>Result </h5>
+
+            <strong>    <h3 id='result' style='color:black;'></h3></strong>
+
+
+         </div>
+          <!-- <div class=" wow bounceInUp col-sm-6" data-wow-duration="1.4s">
+
+              <div id="table-scroll">
+
+                      <table class="fixed" id ="table_data">
+                      {% for i in model.inputs_csv %}
+                         {% if forloop.counter == 1 %}
+                            <th>{{ i.0 }}</th>
+                            <th>{{ i.1 }}</th>
+
+                               {% else %}
+                                 <tr>
+
+                                    <td>
+                                      {{i.0}}</td>
+                                    <td>{{ i.1 }}</td>
+
+                                 </tr>
+                       {% endif %}
+                      {% endfor %}
+
+                      </table>
+
             </div>
-          </div>
-       </div>
+
+       </div> -->
      </div>
 
   <div class="row">
     <div class="span12">
       <div class="blank10"></div>
-      <table>
-
-
-      {% for i in model.inputs_csv %}
-        <tr>
-           <td>{{ i.0 }}</td>
-           <!-- <td> <input type="text" name="" value="{{ i.1 }}">  </td> -->
-           <td>{{ i.1 }}</td>
-        </tr>
-      {% endfor %}
-
-      </table>
     </div>
   </div>
+
+
         <div class="col-xs-4"   style= " margin-bottom: 12px;">
             <input type ="submit" class="btn btn-success  btn-md" id ="Submit" class="form-control">
         </div
