--- a/templates/indview.html
+++ b/templates/indview.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantifi.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/risk_quantifica.css' %}">
   <link href="{% static 'lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'lib/bootstrap/css/bootstrap-responsive.css' %}">
@@ -182,9 +182,25 @@
 
       <nav class="main-nav float-right d-none d-lg-block ">
         <ul>
-          <li ><a href="{% url 'index'%}">Home</a></li>
-          <li><a href="#about">About Us</a></li>
-          <li><a href="#services">Services</a></li>
+          <li
+          {% if '/' == request.path %}
+              class= "nav-item active"
+          {% else %}
+             class= "nav-item "
+          {% endif %}
+                   >
+            <a href ="{%url 'index'%}">Home</a></li>
+          <li>
+          <a href="#about">About Us</a></li>
+          <li
+          {% if '/services/' == request.path %}
+              class= "nav-item active"
+          {% else %}
+             class= "nav-item "
+          {% endif %}
+
+          >
+          <a href="{%url 'services'%}">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
 
         </ul>
@@ -197,21 +213,47 @@
     <div class="container">
       <div class="row">
         <div class="span">
-          <h2><strong><span class="highlight primary">{{model.name}}</span></strong></h2>
+          <!-- <h2><strong><span class="highlight primary">{{model.name}}</span></strong></h2>
           <p class="lead">
           <strong>{{model.summary}}</strong>
 
           </p>
 
 
-          <p>{{model.content}} </p>
+          <p>{{model.content}} </p> -->
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+      <div class="carousel-item active">
 
+        <img class="d-block w-100" src="{{model.slide1.url}}" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{model.slide2.url}}" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{{model.slide3.url}}" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
 
           </div>
         </div>
       </div>
-
+          </div>
   <!-- </section>
 
   <section id="maincontent">
@@ -293,11 +335,16 @@
 
     </div>
     </section> -->
-    {% if model.extras  %}
+    <!-- {% if model.extras  %}
       {{ model.extras|safe }}
-    {% endif %}
+    {% endif %} -->
     <section id="servicesNew" >
         <div class="container">
+          <header class="section-header">
+            <h3>{{model.name}}</h3>
+            <p>xLabs: The digital innovation hub within Virtusa.</p>
+          </header>
+
         <div class="row">
           <div class="wow bounceInUp col-sm-6" data-wow-duration="1.4s">
             <div class="cta-box">
