--- a/virtusa/static/css/risk_quantifica.css
+++ b/virtusa/static/css/risk_quantifica.css
@@ -44,7 +44,7 @@
 .border{
 
   border-radius: 1px solid #000;
-  
+
 }
 .back-to-top {
   position: fixed;
@@ -373,15 +373,15 @@ section#intro{
 	margin-top:80px;
 	padding: 0;
 	border-bottom:1px solid #e9e9e9;
-	padding-top:60px;
+	/* padding-top:60px; */
 	margin-bottom:40px;
 }
 section#servicesNew {
   max-width: 100%;
-  background:#f5f5f5;
+  background:#e9ecef;
   height:auto;
   margin: 0 auto;
-  margin-top:80px;
+  /* margin-top:80px; */
   padding: 0;
   border-bottom:1px solid #e9e9e9;
   padding-top:60px;
@@ -397,9 +397,26 @@ section#servicesNew {
 section#bottom {
 	width: 100%;
 	margin: 0 auto;
-	margin-top:20px;
+	/* margin-top:20px; */
 	padding: 0;
 	padding-top:30px;
+}
+
+.section-header h3 {
+  font-size: 36px;
+  color: #283d50;
+  text-align: center;
+  font-weight: 500;
+  position: relative;
+}
+
+.section-header p {
+  text-align: center;
+  margin: auto;
+  font-size: 15px;
+  padding-bottom: 60px;
+  color: #556877;
+  width: 50%;
 }
 
 section#subintro {
